tests/ui/raw_string_semantic_ids.stderr
error[E0277]: the trait bound `GuardId: From<&str>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:40:34
   |
40 |         registrar.register_guard("api", DummyGuard)?;
   |                   -------------- ^^^^^ the trait `From<&str>` is not implemented for `GuardId`
   |                   |
   |                   required by a bound introduced by this call
   |
   = note: required for `&str` to implement `Into<GuardId>`
note: required by a bound in `foundry::ServiceRegistrar::register_guard`
  --> src/foundation/provider.rs
   |
   |     pub fn register_guard<I, G>(&self, id: I, guard: G) -> Result<()>
   |            -------------- required by a bound in this associated function
   |     where
   |         I: Into<GuardId>,
   |            ^^^^^^^^^^^^^ required by this bound in `ServiceRegistrar::register_guard`

error[E0277]: the trait bound `PolicyId: From<&str>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:41:35
   |
41 |         registrar.register_policy("is_admin", DummyPolicy)?;
   |                   --------------- ^^^^^^^^^^ the trait `From<&str>` is not implemented for `PolicyId`
   |                   |
   |                   required by a bound introduced by this call
   |
   = note: required for `&str` to implement `Into<PolicyId>`
note: required by a bound in `foundry::ServiceRegistrar::register_policy`
  --> src/foundation/provider.rs
   |
   |     pub fn register_policy<I, P>(&self, id: I, policy: P) -> Result<()>
   |            --------------- required by a bound in this associated function
   |     where
   |         I: Into<PolicyId>,
   |            ^^^^^^^^^^^^^^ required by this bound in `ServiceRegistrar::register_policy`

error[E0277]: the trait bound `ValidationRuleId: From<&str>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:49:35
   |
49 |         .register_validation_rule("mobile", DummyRule);
   |          ------------------------ ^^^^^^^^ the trait `From<&str>` is not implemented for `ValidationRuleId`
   |          |
   |          required by a bound introduced by this call
   |
   = note: required for `&str` to implement `Into<ValidationRuleId>`
note: required by a bound in `AppBuilder::register_validation_rule`
  --> src/foundation/app.rs
   |
   |     pub fn register_validation_rule<I, R>(mut self, id: I, rule: R) -> Self
   |            ------------------------ required by a bound in this associated function
   |     where
   |         I: Into<ValidationRuleId>,
   |            ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AppBuilder::register_validation_rule`

error[E0277]: the trait bound `GuardId: From<&str>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:52:16
   |
52 |         .guard("api")
   |          ----- ^^^^^ the trait `From<&str>` is not implemented for `GuardId`
   |          |
   |          required by a bound introduced by this call
   |
   = note: required for `&str` to implement `Into<GuardId>`
note: required by a bound in `foundry::HttpRouteOptions::guard`
  --> src/http/mod.rs
   |
   |     pub fn guard<I>(mut self, guard: I) -> Self
   |            ----- required by a bound in this associated function
   |     where
   |         I: Into<GuardId>,
   |            ^^^^^^^^^^^^^ required by this bound in `HttpRouteOptions::guard`

error[E0277]: the trait bound `PermissionId: From<&str>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:53:21
   |
53 |         .permission("reports:view");
   |          ---------- ^^^^^^^^^^^^^^ the trait `From<&str>` is not implemented for `PermissionId`
   |          |
   |          required by a bound introduced by this call
   |
   = note: required for `&str` to implement `Into<PermissionId>`
note: required by a bound in `foundry::HttpRouteOptions::permission`
  --> src/http/mod.rs
   |
   |     pub fn permission<I>(mut self, permission: I) -> Self
   |            ---------- required by a bound in this associated function
   |     where
   |         I: Into<PermissionId>,
   |            ^^^^^^^^^^^^^^^^^^ required by this bound in `HttpRouteOptions::permission`

error[E0277]: the trait bound `GuardId: From<&str>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:56:16
   |
56 |         .guard("api")
   |          ----- ^^^^^ the trait `From<&str>` is not implemented for `GuardId`
   |          |
   |          required by a bound introduced by this call
   |
   = note: required for `&str` to implement `Into<GuardId>`
note: required by a bound in `foundry::WebSocketChannelOptions::guard`
  --> src/websocket/mod.rs
   |
   |     pub fn guard<I>(mut self, guard: I) -> Self
   |            ----- required by a bound in this associated function
   |     where
   |         I: Into<GuardId>,
   |            ^^^^^^^^^^^^^ required by this bound in `WebSocketChannelOptions::guard`

error[E0277]: the trait bound `PermissionId: From<&str>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:57:21
   |
57 |         .permission("ws:chat");
   |          ---------- ^^^^^^^^^ the trait `From<&str>` is not implemented for `PermissionId`
   |          |
   |          required by a bound introduced by this call
   |
   = note: required for `&str` to implement `Into<PermissionId>`
note: required by a bound in `foundry::WebSocketChannelOptions::permission`
  --> src/websocket/mod.rs
   |
   |     pub fn permission<I>(mut self, permission: I) -> Self
   |            ---------- required by a bound in this associated function
   |     where
   |         I: Into<PermissionId>,
   |            ^^^^^^^^^^^^^^^^^^ required by this bound in `WebSocketChannelOptions::permission`

error[E0277]: the trait bound `CommandId: From<foundry::prelude::Command>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:60:30
   |
60 |     let _ = commands.command(Command::new("hello"), |_invocation: CommandInvocation| async {
   |                      ------- ^^^^^^^^^^^^^^^^^^^^^ the trait `From<foundry::prelude::Command>` is not implemented for `CommandId`
   |                      |
   |                      required by a bound introduced by this call
   |
   = note: required for `foundry::prelude::Command` to implement `Into<CommandId>`
note: required by a bound in `foundry::CommandRegistry::command`
  --> src/cli/mod.rs
   |
   |     pub fn command<I, F, Fut>(&mut self, id: I, command: Command, handler: F) -> Result<&mut Self>
   |            ------- required by a bound in this associated function
   |     where
   |         I: Into<CommandId>,
   |            ^^^^^^^^^^^^^^^ required by this bound in `CommandRegistry::command`

error[E0061]: this method takes 3 arguments but 2 arguments were supplied
  --> tests/ui/raw_string_semantic_ids.rs:60:22
   |
60 |       let _ = commands.command(Command::new("hello"), |_invocation: CommandInvocation| async {
   |  ______________________^^^^^^^________________________-
61 | |         Ok(())
62 | |     });
   | |_____- argument #2 of type `foundry::prelude::Command` is missing
   |
note: method defined here
  --> src/cli/mod.rs
   |
   |     pub fn command<I, F, Fut>(&mut self, id: I, command: Command, handler: F) -> Result<&mut Self>
   |            ^^^^^^^
help: provide the argument
   |
60 ~     let _ = commands.command(
61 +     Command::new("hello"),
62 +     /* foundry::prelude::Command */,
63 +     |_invocation: CommandInvocation| async {
64 +         Ok(())
65 +     },
66 ~     );
   |

error[E0277]: the trait bound `ScheduleId: From<&str>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:66:9
   |
65 |     let _ = schedules.cron(
   |                       ---- required by a bound introduced by this call
66 |         "heartbeat",
   |         ^^^^^^^^^^^ the trait `From<&str>` is not implemented for `ScheduleId`
   |
   = note: required for `&str` to implement `Into<ScheduleId>`
note: required by a bound in `foundry::ScheduleRegistry::cron`
  --> src/scheduler/mod.rs
   |
   |     pub fn cron<I, F, Fut>(
   |            ---- required by a bound in this associated function
...
   |         I: Into<ScheduleId>,
   |            ^^^^^^^^^^^^^^^^ required by this bound in `ScheduleRegistry::cron`
